# keycloak-rust

./: .env  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix
api-example/: Cargo.toml
api-example/src/: main.rs
api-spec/unstable/: openapi.json
nix/crate/: default.nix
nix/keycloak/: build.nix  default.nix  deps.nix  maven-nodejs-hook.sh  source.nix
rust/: Cargo.toml  api-spec  build.rs
rust/api-example/: Cargo.toml
rust/src/: api.rs  auth.rs  error.rs  lib.rs  rest.rs
rust/src/api/: client.rs  group.rs  role.rs  user.rs
rust/src/rest/: types.rs
rust/src/rest/types/: policies.rs
src/: api.rs  auth.rs  error.rs  lib.rs  macros.rs  rest.rs  util.rs
src/api/: client.rs  group.rs  realm.rs
