[package]
workspace = ".."
name = "keycloak-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unstable"]
unstable = []

[dependencies]
progenitor-client = "0.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1" }
tracing = "0.1"
bytes = "1"

[build-dependencies]
prettyplease = "0.2"
progenitor = "0.6"
serde_json = "1.0"
syn = "2.0"
openapiv3 = "2.0"
